wip: insights
